--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 TextGlass C Client
 
 TODO:
--parent attributes
--attribute transformers
 -remove ints, favor longs or something
+-strtoll
 -cleanup file "objects"
