--- a/README
+++ b/README
@@ -5,4 +5,5 @@ TODO:
 -rename jsonfile.c
 -free empty transformers?
 -add 1 to tokens.skip
--put default values in values
+-put default values in value
+-merge replaceall and replacewith
