--- a/README
+++ b/README
@@ -7,3 +7,4 @@ TODO:
 -add 1 to tokens.skip
 -put default values in value
 -merge replaceall and replacewith
+-if no attribute transformers, create static response
